--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -52,11 +52,15 @@ h1 {
     font-size: 20px;
 }
 
-img {
+#sun {
   width: 220px;
   height: 220px;
   margin-left: -110px;
   bottom: 0%;
   position: absolute;
   left: 50%
+}
+
+.sun_remove {
+    display: none;
 }
