--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -3,12 +3,28 @@ body {
     padding: 0;
     font-family: sarpanch;
     font-size: 66px;
-    display: flex;
     height: 100%;
     width: 100%;
-    color: white;
-   
+    color: white;   
 }
+
+main {
+    height: 90vh;
+    width: 100%;
+    background-color: rgba(163, 241, 255);
+    position: relative;
+    z-index: -1;
+}
+
+#sun {
+    width: 220px;
+    height: 220px;
+    margin-left: -110px;    
+    position: absolute;
+    left: 50%;
+    bottom: 0%;
+    
+  }
 
 .container {
     height: 100px;
@@ -25,6 +41,16 @@ body {
     margin: auto;    
 }
 
+header {
+    height: 10vh;
+    background-color: black;
+    display: flex;
+}
+
+h1 {
+    font-size: 30px;    
+    margin: auto;
+}
 
 
 .night {
@@ -48,18 +74,6 @@ body {
     -moz-background-size: cover;
 }
 
-h1 {
-    font-size: 20px;
-}
-
-#sun {
-  width: 220px;
-  height: 220px;
-  margin-left: -110px;
-  bottom: 0%;
-  position: absolute;
-  left: 50%
-}
 
 .sun_remove {
     display: none;
