--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 main {
-    height: 90vh;
+    height: 90%;
     width: 100%;
     background-color: rgba(163, 241, 255);
     position: relative;
@@ -47,7 +47,7 @@ main {
 }
 
 header {
-    height: 10vh;
+    height: 10%;
     background-color: black;
     display: flex;
 }
